--- a/apps/pixelate/src/index.html
+++ b/apps/pixelate/src/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Pixelate</title>
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  </head>
-  <body>
-    <pixelate-root></pixelate-root>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <title>Pixelate</title>
+  <base href="/" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+</head>
+
+<body>
+  <px-root></px-root>
+</body>
+
 </html>
